--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                                 <option value=""></option>
                             </select>    
                             <br>
-                            <button class="btn btn-success btn-lg btn-block"><span class="fa fa-sign-in"></span>Code Writtten By WiDev </button>  
-                            <h6><a href="https://github.com/JayWebtech/Nigeria-states-and-lga-with-dynamic-dropdown-and-search">Visit Github Repo to download source files</a></span></h6>
+                            <button class="btn btn-success btn-lg btn-block"><span class="fa fa-sign-in"></span>Code Writtten By WizDev </button>  
+                            <h6><a href="https://github.com/WisdomAyo/Nigeria-states-and-lga-with-dynamic-dropdown">Visit Github Repo to download source files</a></span></h6>
                                
                         </div>
                 </div>
